[package]
name = "rust-state-machine"
version = "0.1.0"
edition = "2024"

[dependencies]
num = "0.4.3"
once_cell = "1.19.0"
rocksdb = "0.24.0"
clap = { version = "4", features = ["derive"] }
parity-scale-codec = { version = "3", features = ["derive"] }
macros = { path = "./macros/" }
ed25519-dalek = "2"
rayon = "1"
